# libfdc765-qt

./: .travis.yml  CMakeLists.txt  LICENSE  README.md
src/: CMakeLists.txt  diskimagefile.cpp  diskimagefile.h  dskformat.h  floppydiskcontroller.cpp  floppydiskcontroller.h
tests/: CMakeLists.txt
tests/integration/: CMakeLists.txt
tests/integration/fileintegrationtest/: CMakeLists.txt  fileintegrationtest.cpp
tests/unit/: CMakeLists.txt
tests/unit/diskimagefiletest/: CMakeLists.txt  diskimagefiletest.cpp
tests/unit/floppydiskcontrollertest/: CMakeLists.txt  floppydiskcontrollertest.cpp
